--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@ body {
 h1 {
   font-size: 4rem;
   font-weight: 400;
+  letter-spacing: 1px;
 }
 
 #mainView {
@@ -35,11 +36,13 @@ h1 {
 }
 
 header {
-  padding: 2rem 0 4rem;
+  padding: 6rem 0 0;
+  margin-bottom: 2rem;
 }
 
 label {
   font-size: 2rem;
+  letter-spacing: 1px;
 }
 
 section {
@@ -65,6 +68,6 @@ button {
 }
 
 footer {
-  margin-bottom: 1rem;
+  margin: 2rem 0 1rem;
   color: #4e4b5c;
 }
