--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@ body {
   text-align: center;
 }
 
+a {
+  color: #333;
+}
+
 h1 {
   font-size: 4rem;
   font-weight: 400;
@@ -31,7 +35,7 @@ h1 {
 #mainView {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   height: 100vh;
 }
 
@@ -67,11 +71,15 @@ button {
 }
 
 #result {
-  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30vh;
   font-size: 2rem;
 }
 
 footer {
   margin: 2rem 0 1rem;
   color: #4e4b5c;
+  justify-self: flex-end;
 }
